--- a/style.css
+++ b/style.css
@@ -34,17 +34,17 @@
     padding: 16px;
     color: #717171;
     font-weight: bold;
-    font-size: 34px;
+    font-size: 100px;
     transition: 0.6s ease;
     user-select: none;
 }
   
 /* Position the "next button" to the right */
 .next {
-    right: 0;
+    right: 10px;
 }
 .prev {
-    left: 0;
+    left: 10px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
